# rusty-shorty

./: .gitignore  .gitmodules  Cargo.toml  README.md  sqlite.db
backoffice/: Cargo.toml  cdn_download.py  run_minify.py
backoffice/asset/css/: tailwind.css
backoffice/asset/embed/css/: main.css  main.min.css
backoffice/asset/embed/js/: common.js  common.min.js  confirm_message.js  confirm_message.min.js  format_to_local_time.js  format_to_local_time.min.js  htmx.mjs  main.js  main.min.js  shorty_delete_confirm.js  shorty_delete_confirm.min.js  stack_clear_confirm.js  stack_clear_confirm.min.js  user_logout_confirm.js  user_logout_confirm.min.js  vue.mjs
backoffice/asset/embed_hidden/import_map/: import_map.dev.json  import_map.dev.min.json  import_map.prod.json  import_map.prod.min.json
backoffice/asset/embed_hidden/js/: assets
backoffice/asset/embed_locale/en-GB/: home.ftl  login.ftl  shorty-route.ftl  stack.ftl  top.ftl  user-form.ftl  user-route.ftl  validate.ftl
backoffice/src/: lib.rs
backoffice/src/common/: mod.rs
backoffice/src/common/cache/: mod.rs
backoffice/src/common/embed/: mod.rs
backoffice/src/common/html/: context_html.rs  mod.rs
backoffice/src/common/icon/: mod.rs
backoffice/src/common/js/: mod.rs
backoffice/src/common/locale/: mod.rs
backoffice/src/home/: mod.rs
backoffice/src/shorty/: mod.rs
backoffice/src/shorty/form/: add_edit_url_form.rs  mod.rs
backoffice/src/shorty/model/: shorty_model.rs
backoffice/src/shorty/repository/: mod.rs  shorty_repository.rs
backoffice/src/user/: mod.rs
public/: Cargo.toml
(+78 files in other folders)
