[workspace]
resolver = "3"
members = [
    "backoffice",
    "public",
    "rusty-shorty",
    "shared"
]

[workspace.dependencies]
backoffice = { path = "./backoffice" }
public = { path = "./public" }
shared = { path = "./shared" }

thiserror = "2.0.16"
error-stack = "0.6.0"
poem = { version = "3.1.12", features = ["cookie", "session", "csrf", "i18n", "embed"] }
chrono = "0.4.42"
serde = { version = "1.0.225", features = ["derive", "rc"] }
serde_json = "1.0.145"
figment = { version = "0.10.19", features = ["toml"] }
tokio = { version = "1.47.1", features = ["full"] }
maud = { version = "0.27.0", features = ["poem"] }
rusqlite = { version = "0.37.0", features = ["chrono"] }
argon2 = "0.5.3"
rmp-serde = "1.3.0"
cjtoolkit-structured-validator = "0.5.2"
rust-embed = { version = "8.7.2", features = ["include-exclude", "interpolate-folder-path"] }
uuid = { version = "1.18.1", features = ["v4"] }
serde_qs = "1.0.0-rc.3"